--- a/src/app.yaml
+++ b/src/app.yaml
@@ -6,8 +6,11 @@ threadsafe: yes
 
 handlers:
 - url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+  static_files: static/favicon.ico
+  upload: static/favicon\.ico
+  
+- url: /static
+  static_dir: static
 
 - url: /api.*
   script: main.app
