--- a/src/app.yaml
+++ b/src/app.yaml
@@ -8,17 +8,20 @@ handlers:
 - url: /favicon\.ico
   static_files: static/favicon.ico
   upload: static/favicon\.ico
-  
+
 - url: /static
   static_dir: static
 
 - url: /api.*
   script: main.app
-  
+
 - url: /raw.*
   script: main.app
-  
+
 - url: /admin.*
+  script: main.app
+
+- url: /json.*
   script: main.app 
 
 - url: .*
